UPDATE: Inclusão do AXIOS e configução do CORS

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "axios": "^1.7.3",
     "bootstrap": "^5.3.3",
+    "projeto-lista": "file:",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
